# open-unlearning

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-ascend.txt  skills-lock.json
.kilocode/rules/: execute_command_env.md  response_language.md
configs/: eval.yaml  mrd.yaml  selective.yaml  selective_prepare.yaml  selective_reference.yaml  selective_stage.yaml  train.yaml  unlearn.yaml
configs/accelerate/: ascend_multi_npu.yaml  default_config.yaml  zero_stage3_offload_config.json
configs/eval/: rwi.yaml  tofu.yaml  tofu_full.yaml
configs/trainer/: ADO_NPO.yaml  InfoCURL_NPO.yaml
docs/: ascend.md  repro.md  sdpo-plan.md
scripts/: README.md  analyze_infocurl_grid.py  analyze_infocurl_search.py  build_infocurl_grid.py  env_smoketest_tofu10_3b.sh  logits_analyze.py  run_infocurl_grid_dual_npu.sh  run_infocurl_grid_machine_2gpu.sh  run_infocurl_grid_machine_4gpu.sh  run_infocurl_grid_worker.sh  rwi_summrize_pr.py  search_tofu10_infocurl_dual_npu.sh  search_tofu10_infocurl_hard_gamma_sweep_bs8ga2_card0.sh  search_tofu10_infocurl_hard_k_sweep_bs8ga2_card1.sh  submit_selective_dpo.sh  submit_selective_npo.sh  summarize_tofu10_runs.py  tofu10_infocurl_npo_single.sh  tofu_ado_npo.sh  tofu_infocurl_01_ranking_policy.sh  tofu_infocurl_02_retain_penalty.sh  tofu_infocurl_03_hard_curriculum.sh  tofu_infocurl_04_soft_curriculum.sh  tofu_infocurl_05_soft_curriculum_retain.sh  tofu_infocurl_baseline.sh  tofu_infocurl_common.sh  tofu_original_dpo.py  tofu_original_idkdpo_npo.py  tofu_original_idkdpo_npo.sh  tofu_original_npo.py  tofu_plot_pr.py  tofu_selective_eval_stage12.sh  tofu_selective_references.sh  tofu_selective_unlearn.sh  tofu_summarize_pr.py  tofu_unlearn.sh  tofu_unlearn_ascend.sh  tofu_unlearn_pr.py
scripts/baselines/: tofu_unlearn.sh
scripts/maintenance/: migrate_tofu_staging_artifacts.py
src/: eval.py  loss_utils.py  mrd.py  mrd_utils.py  runtime_utils.py  selective.py  selective_prepare.py  selective_reference.py  selective_stage.py  tensorboard_utils.py  trackio_utils.py  train.py
src/data/: qa.py  unlearn.py  utils.py
tests/: test_mrd.py  test_selective.py
(+87 files in other folders)
