[project]
name = "open-unlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.34.2",
    "altair[all]>=6.0.0",
    "bitsandbytes==0.44.1",
    "datasets==3.0.1",
    "deepspeed==0.15.4",
    "hf-xet==1.2.0",
    "huggingface-hub==0.36.0",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3",
    "hydra-optuna-sweeper",
    "lm-eval[hf]==0.4.8",
    "numpy==2.2.3",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.1",
    "rouge-score==0.1.2",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "sentencepiece==0.2.1",
    "tensorboard==2.18.0",
    "tiktoken==0.12.0",
    "torch==2.4.1",
    "torch-incremental-pca",
    "transformers==4.51.3",
    "wandb==0.21.4",
]

[tool.uv.sources]
hydra-optuna-sweeper = { git = "https://github.com/dahlem/hydra.git", subdirectory = "plugins/hydra_optuna_sweeper", rev = "feature/upgrade-optuna-4.2.1" }
torch-incremental-pca = { git = "https://github.com/sirluk/pytorch_incremental_pca.git" }
